<resources>
    <string name="app_name">My Application</string>
    <string name="confirm">Confirm</string>
    <string name="emmm">emmm</string>
    <string name="bigger">bigger</string>
    <string name="_123">123</string>
    <string name="add_something_you_want">Add something you want</string>
    <string name="tang_poetry">Tang Poetry</string>
    <string name="user_guide">User Guide</string>
    <string name="viewing_poems">Viewing poems</string>
    <string name="daily_poetry">Daily poetry</string>
    <string name="home">Home</string>
    <string name="game">GAME</string>
    <string name="me">me</string>
    <string name="setting">setting</string>
    <string name="poems_list">Poems List</string>
    <string name="authorname">AuthorName</string>
    <string name="poemname">PoemName</string>
</resources>
