<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/home_page_background"
    android:orientation="vertical"
    tools:context=".homePage">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tang_poetry"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_above="@+id/viewing_poems"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"/>

        <Button
            android:id="@+id/daily_poetry"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/daily_poetry"
            android:layout_below="@+id/viewing_poems"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_selector"/>

        <Button
            android:id="@+id/viewing_poems"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:text="@string/viewing_poems"
            android:textColor="#ffffff"
            android:background="@drawable/button_selector"/>

        <Button
            android:id="@+id/user_guide"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/user_guide"
            android:layout_below="@+id/daily_poetry"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_selector"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/home" />

        <Button
            android:id="@+id/game"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/game" />

        <Button
            android:id="@+id/me"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/me" />

    </LinearLayout>


</LinearLayout>