<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/personal_center_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="71dp"
            android:text="Personal Center"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@+id/setting"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"
            android:clickable="true"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/Team10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Team10"
            android:textSize="24sp"
            android:layout_above="@+id/setting"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"/>

        <Button
            android:id="@+id/setting"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/setting"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/favourite"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="favourite"
            android:layout_below="@+id/setting"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/download"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_below="@+id/favourite"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="download" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/home" />

        <Button
            android:id="@+id/game"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/game" />

        <Button
            android:id="@+id/me"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/me" />

    </LinearLayout>
</LinearLayout>