<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Game"
            android:textSize="36sp" />

        <Button
            android:id="@+id/apple_tree"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_below="@+id/game_story"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="apple tree" />

        <Button
            android:id="@+id/game_story"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:text="game Story" />

        <Button
            android:id="@+id/poem_escape"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_below="@+id/apple_tree"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="poem escape" />

        <Button
            android:id="@+id/exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="exercise" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/home" />

        <Button
            android:id="@+id/game"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/game" />

        <Button
            android:id="@+id/me"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/me" />

    </LinearLayout>

</LinearLayout>