<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overall"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="51dp">

    </FrameLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_gravity="center"
        android:background="#E9E7E7"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="14sp"
        app:fontFamily="serif" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="27dp">

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="112dp">

        <Button
            android:id="@+id/btn_tryagain"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:text="try again"
            android:textSize="18sp" />

        <Button
            android:id="@+id/checkStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="check whole story"
            android:textSize="18sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">

    </FrameLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="211dp"
        android:background="#DEDDDF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/story"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00D3D0D0"
                android:text="TextView"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/home" />

        <Button
            android:id="@+id/game"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/game" />

        <Button
            android:id="@+id/me"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/me" />

    </LinearLayout>

</LinearLayout>