<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="303dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="The accuracy of this exercise is "
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/accuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="accuracy%"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/numOfWrong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="(The number of wrong answer is: 0)"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/tryAgain"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:text="Try Again" />

            <Button
                android:id="@+id/wrongQuestion"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:text="Review wrong questions" />

            <Button
                android:id="@+id/reviewQuestion"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:text="Review all the questions" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/home" />

        <Button
            android:id="@+id/game"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/game" />

        <Button
            android:id="@+id/me"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/me" />

    </LinearLayout>
</LinearLayout>